crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-indexes_supplier_rand_12_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: supplier_rand_12"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: supplier.s_suppkey = Int64(9012)                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |   TableScan: supplier projection=[s_suppkey, s_name, s_address, s_nationkey, s_phone, s_acctbal, s_comment], partial_filters=[supplier.s_suppkey = Int64(9012)]                                                                                                                                                                                                                                                                                                                                                |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |   CayenneAccelerationExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |       DataSourceExec: file_groups={2 groups: [[/data/supplier/<CAYENNE_PATH>.vortex], [/data/supplier/<CAYENNE_PATH>.vortex]]}, projection=[s_suppkey, s_name, s_address, s_nationkey, s_phone, s_acctbal, s_comment], file_type=vortex, predicate: s_suppkey@0 = 9012 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
